Fixed headline padding on mobile views

--- a/app/styles/pages/home.less
+++ b/app/styles/pages/home.less
@@ -68,7 +68,7 @@
             .headline {
               position: relative;
                 z-index: 2;
-                margin-top: -.75em;
+                margin-top: 2em;
             }
 
         }
@@ -374,6 +374,14 @@
 @media only screen and (min-width: 1440px) and (max-width: 1679px) {
     #home {
         font-size: 19px;
+        header {
+            &.hero {
+                .headline {
+                    margin-top: -.75em;
+                }
+    
+            }
+        }
     }
 }
 
@@ -381,5 +389,13 @@
 @media only screen and (min-width: 1680px) {
     #home {
         font-size: 20px;
+        header {
+            &.hero {
+                .headline {
+                    margin-top: -.75em;
+                }
+    
+            }
+        }
     }
 }
